@@ -1,5 +1,4 @@
 package SauceDemoTests;
-
 import Base.BaseTest;
 import DataDrivenTest.TestDataProvider;
 import SauceDemoPages.LoginPage;
@@ -11,30 +10,29 @@ import java.util.List;
 
 public class SortingFilterPageTest extends BaseTest {
     private LoginPage loginPage;
+
     private SortingFilterPage sortingPage;
 
     @BeforeMethod
     public void setup() {
         loginPage = new LoginPage(bot);
-        sortingPage = new SortingFilterPage(bot);
-
-        loginPage.navigateToLoginPage();
         loginPage.loginAsStandardUser();
+        sortingPage = new SortingFilterPage(bot);
     }
-    @Test(dataProvider = "sortOptions", dataProviderClass = TestDataProvider.SortingDataProvider.class)
+    @Test(dataProvider = "sortOptions", dataProviderClass = TestDataProvider.class)
     public void sortingTest(String option) {
-        // Product names at default status "Expected Result"
-        List<String> beforeSort = sortingPage.getProductNames();
 
+        // Product names at default status "Expected Result"
+        List<String> defaultSort = sortingPage.getProductNames();
         // Select option
         sortingPage.selectSortingOption(option);
         //Actual Result
-        List<String> afterSort = sortingPage.getProductNames();
+        List<String> actualSort = sortingPage.getProductNames();
         //Assertation of products size
-        Assert.assertEquals(afterSort.size(), beforeSort.size(), "Number of products changed!");
+        Assert.assertEquals(actualSort.size(), defaultSort.size(), "Number of products changed!");
 
         if(option.equals("Name (A to Z)")) {
-            Assert.assertTrue(beforeSort.get(0).compareTo(afterSort.get(0)) <= 0,
+            Assert.assertTrue(defaultSort.getFirst().compareTo(actualSort.getFirst()) <= 0,
                     "Products not sorted correctly by Name (A to Z)");
         }
     }
